route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webgui-test
  namespace: datapower
spec:
  to:
    kind: Service
    name: datapower-webgui-2
    weight: 100
  port:
    targetPort: http-url
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDpDCCAowCCQDk39YTB2MDAzANBgkqhkiG9w0BAQsFADCBkzELMAkGA1UEBhMC
[...]
      ze90OW2ZcjtOJb9z0aXZmHlGWFCAcY8V
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: None
